Issue #3717: Fix Demo/embed/demo.c. Reviewed by Benjamin Peterson.